# BayesianBlocks

./: BayesianBlocksLib.py  CMakeLists.txt  ChangeLog  SConscript  azure-pipelines.yml
BayesianBlocks/: BayesianBlocks.h
doc/: Doxyfile  release.notes
python/: BayesianBlocks_python.py  FitsNTuple.py  bb_analysis.py  create_lc_file.py  test_BB.py  test_BB_speed.py
src/: BayesianBlocks.cxx  BayesianBlocks.i  mainpage.h
